<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>dev.dietermai</groupId>
	<artifactId>compare</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<name>TODO</name>
	<description>TODO</description>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<test.scope>compile</test.scope>

		<java.version>18</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.release>${java.version}</maven.compiler.release>

		<!-- maven plugin versions -->
		<maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
		<maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
		<maven-deploy-plugin.version>3.0.0-M2</maven-deploy-plugin.version>
		<maven-install-plugin.version>3.0.0-M1</maven-install-plugin.version>
		<maven-jar-plugin.version>3.2.2</maven-jar-plugin.version>
		<maven-site-plugin.version>3.10.0</maven-site-plugin.version>
		<maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
		<maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
		<maven-compiler-plugin.version>3.9.0</maven-compiler-plugin.version>
		<maven-help-plugin.version>3.2.0</maven-help-plugin.version>
		<maven-dependency-plugin.version>3.2.0</maven-dependency-plugin.version>
	</properties>


	<dependencies>
		<!-- 
		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>5.1.0</version>
		</dependency>
		-->


		<!-- Test Dependencies -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.8.2</version>
			<scope>${test.scope}</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>4.4.0</version>
			<scope>${test.scope}</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>4.4.0</version>
			<scope>${test.scope}</scope>
		</dependency>


	</dependencies>


	<build>
		<sourceDirectory>src</sourceDirectory>
		<!-- <testSourceDirectory>test</testSourceDirectory> -->
		
	
		<plugins>
			<!-- Explicitly define versions of the default plug-ins -->
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>${maven-clean-plugin.version}</version>
			</plugin>

			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>${maven-deploy-plugin.version}</version>
			</plugin>

			<plugin>
				<artifactId>maven-install-plugin</artifactId>
				<version>${maven-install-plugin.version}</version>
			</plugin>

			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven-jar-plugin.version}</version>
			</plugin>

			<plugin>
				<artifactId>maven-site-plugin</artifactId>
				<version>${maven-site-plugin.version}</version>
			</plugin>

			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
			</plugin>

			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>${maven-resources-plugin.version}</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>run</id>
						<configuration>
							<executable>java</executable>
							<arguments>
								<argument>-classpath</argument>
								<classpath/>
					            <argument>dev.dietermai.compare.CompareApp</argument>
							<!--
								<argument>- -module-path</argument>
								<modulepath />
								<argument>- -module</argument>
								<argument>dev.dietermai.compare/dev.dietermai.compare.CompareApp</argument>
							-->
							</arguments>
						</configuration>

					</execution>
				</executions>
			</plugin>

			<!-- Just sum helper to check out plug-in help -->
			<!-- E.g. call 'mvn help:describe@javafx -Ddetail' to see the help of the javafx plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-help-plugin</artifactId>
				<version>${maven-help-plugin.version}</version>
				<executions>
					<execution>
						<id>compile</id>
						<configuration>
							<plugin>org.apache.maven.plugins:maven-compiler-plugin</plugin>
						</configuration>
					</execution>
					<execution>
						<id>dependency</id>
						<configuration>
							<plugin>org.apache.maven.plugins:maven-dependency-plugin</plugin>
						</configuration>
					</execution>
					<execution>
						<id>clean</id>
						<configuration>
							<plugin>org.apache.maven.plugins:maven-clean-plugin</plugin>
						</configuration>
					</execution>
					<execution>
						<id>resources</id>
						<configuration>
							<plugin>org.apache.maven.plugins:maven-resources-plugin</plugin>
						</configuration>
					</execution>
					<execution>
						<id>jar</id>
						<configuration>
							<plugin>org.apache.maven.plugins:maven-jar-plugin</plugin>
						</configuration>
					</execution>
					<execution>
						<id>install</id>
						<configuration>
							<plugin>org.apache.maven.plugins:maven-install-plugin</plugin>
						</configuration>
					</execution>
					<execution>
						<id>version</id>
						<configuration>
							<plugin>org.codehaus.mojo:versions-maven-plugin</plugin>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- Copy Dependencies to one directory for easy access -->
			<!-- Usage: mvn dependency:copy-dependencies@lib -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>${maven-dependency-plugin.version}</version>
				<executions>
					<execution>
						<id>lib</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>lib</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>